# waterinfohub

./: .env.example  .env.prod.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260413_0001_init_schema.py  20260413_0002_query_optimization.py
apps/api/: main.py
apps/worker/: main.py
configs/prompts/: competitor_analysis.md  standard_extract.md  tender_analysis.md  weekly_report.md
configs/scoring/: rules.yaml
configs/sources/: competitors.yaml  standards.yaml  tenders.yaml
docs/: aliyun-ecs-deployment.md  linux-cloud-readiness.md  waterinfohub-implementation-plan.md
infra/docker/: Dockerfile  docker-compose.prod.yml
infra/sql/: 001_init.sql  002_events.sql  003_reports.sql  004_tender_reserve.sql
infra/systemd/: waterinfohub-worker.service  waterinfohub-worker.timer
scripts/: linux-bootstrap.sh  test_wework.py
src/collectors/: base.py
src/pipelines/: weekly_report.py
src/services/: report_renderer.py  settings.py
src/waterinfohub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/waterinfohub/collectors/: source_loader.py
src/waterinfohub/core/: settings.py
src/waterinfohub/db/: models.py  session.py
src/waterinfohub/pipelines/: ingest.py  normalize.py  weekly_report.py
src/waterinfohub/services/: llm_client.py  report_renderer.py  scoring.py  structured_logger.py  wework_notify.py
